--- a/src/components/atomes/style.css
+++ b/src/components/atomes/style.css
@@ -51,3 +51,37 @@ nav{
     justify-content: center;
     gap: 7rem;
 }
+
+/* PRODUCT CARD */
+
+.product_card{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 20px;
+    width: 100%;
+
+    background-color: #F5F5F5;
+    border-radius: 50px;
+
+    cursor: pointer;
+}
+
+.product_card-img, .product_card-name, .product_card-brand, .product_card-price{
+    width: 100%;
+
+    color: #041439;
+    font-family: "Poppins", sans-serif;
+    font-size: 2em;
+    text-align: center;
+}
+
+.product_card-img{
+}
+.product_card-name{
+}
+.product_card-brand{
+}
+.product_card-price{
+}
